--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@mui/material-nextjs": "^5.15.3",
     "next": "^14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
