--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
+    "@iconify/react": "^4.1.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
